Fix input groups on firefox linux

--- a/popup/input.css
+++ b/popup/input.css
@@ -34,7 +34,6 @@ input {
 }
 
 .input-group {
-    align-items: flex-start;
     align-self: stretch;
     display: flex;
 }
